--- a/style/base.css
+++ b/style/base.css
@@ -11,6 +11,11 @@ p {
     margin: unset;
 }
 
+.sizeFull {
+    width: 100%;
+    height: 100%;
+}
+
 .jp-EodagWidget {
     display: flex;
     flex-direction: column;
