--- a/style/result_list.css
+++ b/style/result_list.css
@@ -1,22 +1,33 @@
-.result_row {
-    width: calc(100% - 3rem) !important; /* margin-left & right = 3rem */
-    height: 118px !important;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    display: flex;
+.result_wrapper {
+    position: relative;
     margin: 0 1.5rem;
-    overflow: hidden;
-    border-radius: 0.5rem;
+    width: calc(100% - 3rem) !important; /* margin-left & right = 3rem */
+    cursor: pointer;
 }
 
-.result_row .result_preview {
+.result_wrapper .result_preview {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
     width: 118px;
     height: 118px;
+    border-top-left-radius: 8px;
+    overflow: hidden;
+    border-bottom-left-radius: 8px;
 }
 
-.result_row .result_preview img {
+.result_wrapper .result_preview img {
     width: 100%;
     height: 100%;
+}
+
+.result_row {
+    position: relative;
+    display: flex;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
+    height: 114px; /* 114 because 118 - 4px border-width */
+    border-radius: 0.5rem;
 }
 
 .result_row .result_infos {
@@ -25,6 +36,8 @@
     gap: 0.25rem;
     padding: 12px;
     width: calc(100% - 118px); /* Img width */
+    margin-left: 118px;
+    position: relative;
 }
 
 .result_row .result_tags {
@@ -45,4 +58,12 @@
     color: #808080;
     font-size: 0.725rem;
     word-break: break-all;
+}
+
+.result_row .result_infos .result_zoom_button {
+    position: absolute;
+    bottom: 4px;
+    right: 4px;
+    color: #007AFF;
+    border-radius: 50px;
 }
