--- a/style/modal.css
+++ b/style/modal.css
@@ -102,7 +102,7 @@ span {
     padding: 0 3px !important;
     background-color: #3bacff !important;
     color: white !important;
-    height: 22px !important
+    height: 22px !important;
 }
 
 .jp-EodagWidget-chip svg {
@@ -124,5 +124,122 @@ span {
     background: white;
     border-radius: 12px;
     box-shadow: 3px 0 10px rgb(0 0 0 / 25%);
-    padding: 1.5rem 0; /* No padding left & right, to prevent the shadows from being overflowed */
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+}
+
+.jp-EodagWidget-modal-selected-result-preview {
+    width: 250px;
+    min-width: 250px;
+    height: 250px;
+    border-radius: 8px;
+    overflow: hidden;
+    border: 1px solid rgba(0 0 0 / 10%);
+    position: relative;
+}
+
+.jp-EodagWidget-modal-selected-result-preview img {
+    min-width: 100%;
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.jp-EodagWidget-modal-selected-result-infos {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1;
+    width: calc(100% - 274px);
+}
+
+.jp-EodagWidget-modal-selected-result-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 1.5rem;
+}
+
+.jp-EodagWidget-modal-selected-result-title span {
+    font-size: 1.2rem;
+    line-height: 1.7rem;
+    font-weight: 600;
+    word-break: break-all;
+}
+
+.jp-EodagWidget-modal-selected-result-zoomButton {
+    background-color: #007aff !important;
+    color: white !important;
+    border-radius: 5px !important;
+}
+
+.jp-EodagWidget-modal-selected-result-metadata {
+    display: flex;
+    border: 1px solid rgba(68 68 68 / 10%);
+    border-radius: 8px;
+    flex-direction: column;
+    overflow: scroll;
+}
+
+.jp-EodagWidget-modal-selected-result-metadata-title {
+    padding: 0.5rem 0.75rem;
+    background-color: #e4e4e4;
+    color: black;
+    display: flex;
+    gap: 1.5rem;
+}
+
+.jp-EodagWidget-modal-selected-result-metadata-title span {
+    flex: 1;
+    font-size: 1rem;
+    line-height: 1.25rem;
+}
+
+.jp-EodagWidget-modal-selected-result-metadata-content {
+    padding: 0.75rem 1.15rem;
+    display: flex;
+    gap: 0.75rem 0;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    overflow: scroll;
+    overflow-x: hidden;
+    height: 110px;
+}
+
+.jp-EodagWidget-modal-selected-result-metadata-line {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    width: 49%;
+}
+
+.jp-EodagWidget-modal-selected-result-metadata-line span {
+    font-weight: 400;
+    color: #444444;
+    font-size: 1rem;
+    line-height: 1.32rem;
+    max-width: 45%;
+    overflow: hidden;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
+}
+
+.jp-EodagWidget-modal-selected-result-metadata-line .separator {
+    flex: 1;
+    border-bottom: 1px solid rgba(68 68 68 / 10%);
+}
+
+.jp-EodagWidget-modal-selected-result-action-buttons {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.jp-EodagWidget-modal-selected-result-action-buttons button {
+    text-transform: unset;
+    background-color: #007aff;
+    border-radius: 5px;
+    color: white;
 }
