--- a/style/loader.css
+++ b/style/loader.css
@@ -22,13 +22,18 @@
   align-items: center;
   justify-content: center;
   opacity: 1;
-  z-index: 999;
+  z-index: 2;
   border-radius: 4px;
   transition: opacity 250ms ease-in-out;
   pointer-events: all;
   background: rgba(255, 255, 255, 0.65);
   width: 100%;
   height: 100%;
+}
+
+.jp-EodagWidget-select__menu {
+  /* To go over the loader */
+  z-index: 3 !important;
 }
 
 .loader-container.fade-out {
