wip(buttons): Add refacto for buttons

--- a/style/base.css
+++ b/style/base.css
@@ -72,26 +72,36 @@ p {
   justify-content: space-between;
 }
 
+.jp-EodagWidget-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 0 10px;
+}
+
 .jp-EodagWidget .jp-EodagWidget-form {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 
 .jp-EodagWidget-form-buttons {
   width: 100%;
   max-width: 450px;
-  margin: auto;
-}
-
-.jp-EodagWidget-form-buttons-wrapper {
-  display: flex;
-  justify-content: space-evenly;
 }
 
 .jp-EodagWidget-loader {
-  margin-top: 30px;
+  margin-top: 10px;
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+.jp-EodagWidget-loader svg {
+  width: 2rem;
+  height: 2rem;
+  fill: #1976d2;
 }
 
 .jp-EodagWidget-loader p {
@@ -114,57 +124,10 @@ p {
   color: var(--gray);
 }
 
-.jp-EodagWidget-form-date-picker {
-  padding: 0 10px;
-}
-
 .jp-EodagWidget-form-date-picker-wrapper {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
-}
-
-.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons {
-  display: flex;
-  justify-content: center;
-  margin-top: 1em;
-}
-
-.jp-EodagWidget-buttons-button__disabled {
-  background-color: grey !important;
-  cursor: not-allowed !important;
-}
-
-.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons-button {
-  cursor: pointer;
-  min-width: 110px;
-  color: #ffffff;
-  background: var(--base-button);
-  border: none;
-  box-sizing: border-box;
-  outline: none;
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  padding: 7px;
-  margin: 0px;
-  border-radius: var(--border-radius);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.jp-EodagWidget-buttons svg {
-  margin-right: 0.5rem;
-}
-
-.jp-EodagWidget-buttons p {
-  text-align: left;
-  font-size: var(--jp-ui-font-size1);
-}
-
-.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-buttons button:hover {
-  background: var(--button-hover);
 }
 
 .jp-EodagWidget .jp-EodagWidget-form .react-datepicker-popper {
@@ -184,18 +147,11 @@ p {
 }
 
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field {
-  padding: 0 10px;
   max-width: 450px;
-  margin: auto;
 }
 
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-field fieldset {
   margin-top: 1.5em;
-}
-
-.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input-name {
-  margin-top: 1em;
-  display: block;
 }
 
 .jp-EodagWidget-input-name-checkbox-wrapper {
@@ -216,8 +172,8 @@ p {
 }
 
 .jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-input-wrapper:nth-child(1) {
+.jp-EodagWidget-form
+.jp-EodagWidget-input-wrapper:nth-child(1) {
   margin-right: 0.1rem;
 }
 
@@ -229,8 +185,8 @@ p {
 }
 
 .jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-input-wrapper:focus-within {
+.jp-EodagWidget-form
+.jp-EodagWidget-input-wrapper:focus-within {
   border: 1px solid #2196f3;
 }
 
@@ -247,11 +203,6 @@ p {
 
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-input::placeholder {
   color: var(--gray);
-}
-
-.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-additionalParameters {
-  margin-top: 10px;
-  padding: 0 10px;
 }
 
 .jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-section-title {
@@ -276,31 +227,16 @@ p {
 }
 
 .jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-optional-button:not(:disabled):hover {
+.jp-EodagWidget-form
+.jp-EodagWidget-optional-button:not(:disabled):hover {
   color: rgb(59, 172, 255);
 }
 
 .jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionalParameters {
-  margin-top: 10px;
-}
-
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionalParameters
-  .jp-EodagWidget-input-name {
-  margin-bottom: 10px;
-}
-
-.jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionalParameters
-  .section {
+.jp-EodagWidget-form
+.jp-EodagWidget-fields
+.jp-EodagWidget-additionalParameters
+.section {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -308,10 +244,10 @@ p {
 }
 
 .jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionalParameters
-  input {
+.jp-EodagWidget-form
+.jp-EodagWidget-fields
+.jp-EodagWidget-additionalParameters
+input {
   margin: 0 0.1em;
   line-height: var(--jp-private-commandpalette-search-height);
   border: 1px solid var(--jp-border-color0);
@@ -321,47 +257,47 @@ p {
 }
 
 .jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionalParameters
-  .jp-EodagWidget-additionalParameters-label-icon-wrapper {
+.jp-EodagWidget-form
+.jp-EodagWidget-fields
+.jp-EodagWidget-additionalParameters
+.jp-EodagWidget-additionalParameters-label-icon-wrapper {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
 }
 
 .jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionalParameters
-  .jp-EodagWidget-additionalParameters-label-icon-wrapper
-  a {
+.jp-EodagWidget-form
+.jp-EodagWidget-fields
+.jp-EodagWidget-additionalParameters
+.jp-EodagWidget-additionalParameters-label-icon-wrapper
+a {
   display: inline-flex;
   margin-left: 5px;
 }
 
 .jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionalParameters
-  .jp-EodagWidget-additionalParameters-label-icon-wrapper
-  a:hover {
+.jp-EodagWidget-form
+.jp-EodagWidget-fields
+.jp-EodagWidget-additionalParameters
+.jp-EodagWidget-additionalParameters-label-icon-wrapper
+a:hover {
   color: #677381;
 }
 
 .jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionalParameters
-  input:focus-within {
+.jp-EodagWidget-form
+.jp-EodagWidget-fields
+.jp-EodagWidget-additionalParameters
+input:focus-within {
   border: 1px solid #2196f3;
 }
 
 .jp-EodagWidget
-  .jp-EodagWidget-form
-  .jp-EodagWidget-field
-  .jp-EodagWidget-additionalParameters
-  input::placeholder {
+.jp-EodagWidget-form
+.jp-EodagWidget-fields
+.jp-EodagWidget-additionalParameters
+input::placeholder {
   padding-left: 0.3rem;
 }
 
