--- a/style/button.css
+++ b/style/button.css
@@ -8,10 +8,11 @@
   gap: 0.5rem;
   border-radius: 6px !important;
   text-transform: none !important;
-  line-height: 1.45 !important;
+  line-height: 1.4 !important;
+  font-size: 14px !important;
 }
 
 .jp-EodagButton svg {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.15rem;
+  height: 1.15rem;
 }
