feat(custom parameters): Add new dropdownMenu component, used in moreParameters & header optionsDropdown

--- a/style/menu_dropdown.css
+++ b/style/menu_dropdown.css
@@ -1,6 +1,6 @@
 .jp-EodagWidget-menuItem {
-  display: flex;
   gap: 0.5rem;
+  font-size: 0.8rem !important;
 }
 
 .jp-EodagWidget-menuItem > svg {
