--- a/style/base.css
+++ b/style/base.css
@@ -11,6 +11,11 @@ p {
   margin: unset;
 }
 
+.sizeFull {
+  width: 100%;
+  height: 100%;
+}
+
 .jp-EodagWidget {
   display: flex;
   flex-direction: column;
@@ -240,7 +245,7 @@ p {
   color: var(--gray);
 }
 
-.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-additionnalParameters {
+.jp-EodagWidget .jp-EodagWidget-form .jp-EodagWidget-additionalParameters {
   margin-top: 10px;
   padding: 0 10px;
 }
@@ -275,14 +280,14 @@ p {
 .jp-EodagWidget
   .jp-EodagWidget-form
   .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters {
+  .jp-EodagWidget-additionalParameters {
   margin-top: 10px;
 }
 
 .jp-EodagWidget
   .jp-EodagWidget-form
   .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
+  .jp-EodagWidget-additionalParameters
   .jp-EodagWidget-input-name {
   margin-bottom: 10px;
 }
@@ -290,7 +295,7 @@ p {
 .jp-EodagWidget
   .jp-EodagWidget-form
   .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
+  .jp-EodagWidget-additionalParameters
   .section {
   display: flex;
   justify-content: space-between;
@@ -301,7 +306,7 @@ p {
 .jp-EodagWidget
   .jp-EodagWidget-form
   .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
+  .jp-EodagWidget-additionalParameters
   input {
   margin: 0 0.1em;
   line-height: var(--jp-private-commandpalette-search-height);
@@ -314,8 +319,8 @@ p {
 .jp-EodagWidget
   .jp-EodagWidget-form
   .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  .jp-EodagWidget-additionnalParameters-label-icon-wrapper {
+  .jp-EodagWidget-additionalParameters
+  .jp-EodagWidget-additionalParameters-label-icon-wrapper {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
@@ -324,8 +329,8 @@ p {
 .jp-EodagWidget
   .jp-EodagWidget-form
   .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  .jp-EodagWidget-additionnalParameters-label-icon-wrapper
+  .jp-EodagWidget-additionalParameters
+  .jp-EodagWidget-additionalParameters-label-icon-wrapper
   a {
   display: inline-flex;
   margin-left: 5px;
@@ -334,8 +339,8 @@ p {
 .jp-EodagWidget
   .jp-EodagWidget-form
   .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
-  .jp-EodagWidget-additionnalParameters-label-icon-wrapper
+  .jp-EodagWidget-additionalParameters
+  .jp-EodagWidget-additionalParameters-label-icon-wrapper
   a:hover {
   color: #677381;
 }
@@ -343,7 +348,7 @@ p {
 .jp-EodagWidget
   .jp-EodagWidget-form
   .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
+  .jp-EodagWidget-additionalParameters
   input:focus-within {
   border: 1px solid #2196f3;
 }
@@ -351,14 +356,14 @@ p {
 .jp-EodagWidget
   .jp-EodagWidget-form
   .jp-EodagWidget-field
-  .jp-EodagWidget-additionnalParameters
+  .jp-EodagWidget-additionalParameters
   input::placeholder {
   padding-left: 0.3rem;
 }
 
-.jp-EodagWidget-additionnalParameters-deletebutton,
-.jp-EodagWidget-additionnalParameters-addbutton,
-.jp-EodagWidget-settingsbutton {
+.jp-EodagWidget-additionalParameters-deletebutton,
+.jp-EodagWidget-additionalParameters-addbutton,
+.jp-EodagWidget-settingsButton {
   cursor: pointer;
   border-radius: 50%;
   border-width: 0px;
@@ -367,16 +372,16 @@ p {
   align-items: center;
 }
 
-section button .jp-EodagWidget-additionnalParameters-deletebutton svg,
-section button .jp-EodagWidget-additionnalParameters-addbutton svg,
-.jp-EodagWidget-settingsbutton svg {
+section button .jp-EodagWidget-additionalParameters-deletebutton svg,
+section button .jp-EodagWidget-additionalParameters-addbutton svg,
+.jp-EodagWidget-settingsButton svg {
   color: #000000;
   background-color: #ffffff;
 }
 
-.jp-EodagWidget-additionnalParameters-deletebutton svg:hover,
-.jp-EodagWidget-additionnalParameters-addbutton svg:hover,
-.jp-EodagWidget-settingsbutton svg:hover {
+.jp-EodagWidget-additionalParameters-deletebutton svg:hover,
+.jp-EodagWidget-additionalParameters-addbutton svg:hover,
+.jp-EodagWidget-settingsButton svg:hover {
   color: #677381;
 }
 
@@ -508,72 +513,6 @@ section button .jp-EodagWidget-additionnalParameters-addbutton svg,
 
 .jp-EodagWidget input[type='range']::-ms-fill-upper {
   background: transparent;
-}
-
-.jp-EodagWidget-modal .jp-EodagWidget-quicklook-wrapper {
-  display: flex;
-  justify-content: center;
-}
-
-.jp-EodagWidget-modal .jp-EodagWidget-small-quicklook {
-  max-height: 200px;
-  max-width: 200px;
-  cursor: zoom-in;
-}
-
-.jp-EodagWidget-modal .jp-EodagWidget-modal-container {
-  display: flex;
-  height: calc(100vh - 48px);
-}
-
-.jp-EodagWidget-modal .jp-EodagWidget-product-wrapper {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-}
-
-.jp-EodagWidget-modal
-  .jp-EodagWidget-modal-container
-  .jp-EodagWidget-modal-footer {
-  display: flex;
-  justify-content: center;
-  background-color: var(--jp-brand-color1);
-  padding: 12px 10px;
-  font-size: 20px;
-  color: white;
-}
-
-.jp-EodagWidget-modal .jp-EodagWidget-browse-wrapper {
-  height: calc(100% - 130px);
-}
-
-.jp-EodagWidget-modal .jp-EodagWidget-loading-wrapper {
-  margin-right: 10px;
-}
-
-.jp-EodagWidget-modal .jp-EodagWidget-browse-title {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  margin: 5px 0;
-  font-style: italic;
-  font-size: 0.9em;
-  height: 18px;
-}
-
-.jp-EodagWidget-modal .jp-EodagWidget-desc-wrapper {
-  height: 100%;
-  width: 50%;
-  overflow: auto;
-}
-
-.jp-EodagWidget-modal .jp-EodagWidget-right-buttons-wrapper {
-  display: flex;
-  justify-content: right;
-}
-
-.jp-EodagWidget-modal .jp-EodagWidget-title {
-  flex-grow: 1;
 }
 
 .jp-EodagWidget-appbar {
